fixed color shift

--- a/custom.css
+++ b/custom.css
@@ -79,6 +79,7 @@ input {
   height: 30px;
   background-color: black;
   color: #83cafe;
+  border-style: solid;
 }
 
 label {
